// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ic-search-bar search should render aria-label when hideLabel is set: renders-with-hidden-label 1`] = `
<ic-search-bar class="ic-search-bar-search" hide-label="true" label="Test label" value="">
  <template shadowrootmode="open">
    <ic-input-container>
      <ic-input-component-container size="medium">
        <input aria-label="Test label" autocapitalize="off" autocomplete="off" id="ic-search-bar-input-2" inputmode="search" name="ic-search-bar-input-2" placeholder="Search" value="">
        <div class="clear-button-container">
          <ic-button class="clear-button clear-button-unfocused ic-button-size-medium ic-button-variant-icon ic-theme-dark" exportparts="button" id="clear-button">
            <template shadowrootmode="open">
              <ic-tooltip label="Clear" placement="bottom" silent="" target="ic-button-with-tooltip-clear-button">
                <button aria-label="Clear" class="button" part="button" type="submit">
                  <slot></slot>
                </button>
              </ic-tooltip>
            </template>
            svg
          </ic-button>
          <div class="divider"></div>
        </div>
        <div class="search-submit-button-container search-submit-button-disabled">
          <ic-button class="ic-button-disabled ic-button-size-medium ic-button-variant-icon ic-theme-dark search-submit-button search-submit-button-disabled search-submit-button-unfocused" exportparts="button" id="search-submit-button">
            <template shadowrootmode="open">
              <ic-tooltip label="Search" placement="bottom" silent="" target="ic-button-with-tooltip-search-submit-button">
                <button aria-disabled="true" aria-label="Search" class="button" disabled="" part="button" type="submit">
                  <slot></slot>
                </button>
              </ic-tooltip>
            </template>
            svg
          </ic-button>
        </div>
      </ic-input-component-container>
      <div class="menu-container"></div>
    </ic-input-container>
    <div aria-live="polite" class="search-results-status" role="status"></div>
  </template>
  <input class="ic-input" name="ic-search-bar-input-2" type="hidden" value="">
</ic-search-bar>
`;

exports[`ic-search-bar search should render disabled variant: disabled-removed 1`] = `
<ic-search-bar class="ic-search-bar-search" label="Test label" value="">
  <template shadowrootmode="open">
    <ic-input-container>
      <ic-input-label for="ic-search-bar-input-4" helpertext="" label="Test label"></ic-input-label>
      <ic-input-component-container size="medium">
        <input aria-label="Test label" autocapitalize="off" autocomplete="off" id="ic-search-bar-input-4" inputmode="search" name="ic-search-bar-input-4" placeholder="Search" value="">
        <div class="clear-button-container">
          <ic-button class="clear-button clear-button-unfocused ic-button-size-medium ic-button-variant-icon ic-theme-dark" exportparts="button" id="clear-button">
            <template shadowrootmode="open">
              <ic-tooltip label="Clear" placement="bottom" silent="" target="ic-button-with-tooltip-clear-button">
                <button aria-label="Clear" class="button" part="button" type="submit">
                  <slot></slot>
                </button>
              </ic-tooltip>
            </template>
            svg
          </ic-button>
          <div class="divider"></div>
        </div>
        <div class="search-submit-button-container search-submit-button-disabled">
          <ic-button class="ic-button-disabled ic-button-size-medium ic-button-variant-icon ic-theme-dark search-submit-button search-submit-button-disabled search-submit-button-unfocused" exportparts="button" id="search-submit-button">
            <template shadowrootmode="open">
              <ic-tooltip label="Search" placement="bottom" silent="" target="ic-button-with-tooltip-search-submit-button">
                <button aria-disabled="true" aria-label="Search" class="button" disabled="" part="button" type="submit">
                  <slot></slot>
                </button>
              </ic-tooltip>
            </template>
            svg
          </ic-button>
        </div>
      </ic-input-component-container>
      <div class="menu-container"></div>
    </ic-input-container>
    <div aria-live="polite" class="search-results-status" role="status"></div>
  </template>
  <input class="ic-input" name="ic-search-bar-input-4" type="hidden" value="">
</ic-search-bar>
`;

exports[`ic-search-bar search should render disabled variant: renders-disabled 1`] = `
<ic-search-bar class="ic-search-bar-disabled ic-search-bar-search" disabled="true" label="Test label" value="">
  <template shadowrootmode="open">
    <ic-input-container disabled="">
      <ic-input-label disabled="" for="ic-search-bar-input-4" helpertext="" label="Test label"></ic-input-label>
      <ic-input-component-container disabled="" size="medium">
        <input aria-label="Test label" autocapitalize="off" autocomplete="off" disabled="" id="ic-search-bar-input-4" inputmode="search" name="ic-search-bar-input-4" placeholder="Search" value="">
        <div class="clear-button-container">
          <ic-button class="clear-button clear-button-unfocused ic-button-size-medium ic-button-variant-icon ic-theme-dark" exportparts="button" id="clear-button">
            <template shadowrootmode="open">
              <ic-tooltip label="Clear" placement="bottom" silent="" target="ic-button-with-tooltip-clear-button">
                <button aria-label="Clear" class="button" part="button" type="submit">
                  <slot></slot>
                </button>
              </ic-tooltip>
            </template>
            svg
          </ic-button>
          <div class="divider"></div>
        </div>
        <div class="search-submit-button-container search-submit-button-disabled">
          <ic-button class="ic-button-disabled ic-button-size-medium ic-button-variant-icon ic-theme-dark search-submit-button search-submit-button-disabled search-submit-button-unfocused" exportparts="button" id="search-submit-button">
            <template shadowrootmode="open">
              <ic-tooltip label="Search" placement="bottom" silent="" target="ic-button-with-tooltip-search-submit-button">
                <button aria-disabled="true" aria-label="Search" class="button" disabled="" part="button" type="submit">
                  <slot></slot>
                </button>
              </ic-tooltip>
            </template>
            svg
          </ic-button>
        </div>
      </ic-input-component-container>
      <div class="menu-container"></div>
    </ic-input-container>
    <div aria-live="polite" class="search-results-status" role="status"></div>
  </template>
  <input class="ic-input" disabled="" name="ic-search-bar-input-4" type="hidden" value="">
</ic-search-bar>
`;

exports[`ic-search-bar search should render readonly variant: renders-readonly 1`] = `
<ic-search-bar class="ic-search-bar-search" label="Test label" readonly="true" value="">
  <template shadowrootmode="open">
    <ic-input-container disabled="" readonly="">
      <ic-input-label for="ic-search-bar-input-5" helpertext="" label="Test label" readonly=""></ic-input-label>
      <ic-input-component-container disabled="" readonly="" size="medium">
        <input aria-label="Test label" autocapitalize="off" autocomplete="off" class="no-left-pad readonly" disabled="" id="ic-search-bar-input-5" inputmode="search" name="ic-search-bar-input-5" placeholder="Search" readonly="" value="">
        <div class="clear-button-container">
          <ic-button class="clear-button clear-button-unfocused ic-button-size-medium ic-button-variant-icon ic-theme-dark" exportparts="button" id="clear-button">
            <template shadowrootmode="open">
              <ic-tooltip label="Clear" placement="bottom" silent="" target="ic-button-with-tooltip-clear-button">
                <button aria-label="Clear" class="button" part="button" type="submit">
                  <slot></slot>
                </button>
              </ic-tooltip>
            </template>
            svg
          </ic-button>
          <div class="divider"></div>
        </div>
        <div class="search-submit-button-container search-submit-button-disabled">
          <ic-button class="ic-button-disabled ic-button-size-medium ic-button-variant-icon ic-theme-dark search-submit-button search-submit-button-disabled search-submit-button-unfocused" exportparts="button" id="search-submit-button">
            <template shadowrootmode="open">
              <ic-tooltip label="Search" placement="bottom" silent="" target="ic-button-with-tooltip-search-submit-button">
                <button aria-disabled="true" aria-label="Search" class="button" disabled="" part="button" type="submit">
                  <slot></slot>
                </button>
              </ic-tooltip>
            </template>
            svg
          </ic-button>
        </div>
      </ic-input-component-container>
      <div class="menu-container"></div>
    </ic-input-container>
    <div aria-live="polite" class="search-results-status" role="status"></div>
  </template>
  <input class="ic-input" disabled="" name="ic-search-bar-input-5" type="hidden" value="">
</ic-search-bar>
`;

exports[`ic-search-bar search should render required variant: renders-required 1`] = `
<ic-search-bar class="ic-search-bar-search" label="Test label" required="true" value="">
  <template shadowrootmode="open">
    <ic-input-container>
      <ic-input-label for="ic-search-bar-input-3" helpertext="" label="Test label" required=""></ic-input-label>
      <ic-input-component-container size="medium">
        <input aria-label="Test label" autocapitalize="off" autocomplete="off" id="ic-search-bar-input-3" inputmode="search" name="ic-search-bar-input-3" placeholder="Search" required="" value="">
        <div class="clear-button-container">
          <ic-button class="clear-button clear-button-unfocused ic-button-size-medium ic-button-variant-icon ic-theme-dark" exportparts="button" id="clear-button">
            <template shadowrootmode="open">
              <ic-tooltip label="Clear" placement="bottom" silent="" target="ic-button-with-tooltip-clear-button">
                <button aria-label="Clear" class="button" part="button" type="submit">
                  <slot></slot>
                </button>
              </ic-tooltip>
            </template>
            svg
          </ic-button>
          <div class="divider"></div>
        </div>
        <div class="search-submit-button-container search-submit-button-disabled">
          <ic-button class="ic-button-disabled ic-button-size-medium ic-button-variant-icon ic-theme-dark search-submit-button search-submit-button-disabled search-submit-button-unfocused" exportparts="button" id="search-submit-button">
            <template shadowrootmode="open">
              <ic-tooltip label="Search" placement="bottom" silent="" target="ic-button-with-tooltip-search-submit-button">
                <button aria-disabled="true" aria-label="Search" class="button" disabled="" part="button" type="submit">
                  <slot></slot>
                </button>
              </ic-tooltip>
            </template>
            svg
          </ic-button>
        </div>
      </ic-input-component-container>
      <div class="menu-container"></div>
    </ic-input-container>
    <div aria-live="polite" class="search-results-status" role="status"></div>
  </template>
  <input class="ic-input" name="ic-search-bar-input-3" type="hidden" value="">
</ic-search-bar>
`;

exports[`ic-search-bar search should render with characters-until-suggestion set to 0: renders-with-zero-characters-until-suggestion 1`] = `
<ic-search-bar characters-until-suggestion="0" class="ic-search-bar-search" label="Test label" value="">
  <template shadowrootmode="open">
    <ic-input-container>
      <!---->
      <div class="component-container">
        <ic-input-label>
          <ic-typography variant="label">
            <label htmlfor="ic-search-bar-input-30">
              Test label
            </label>
          </ic-typography>
        </ic-input-label>
        <ic-input-component-container size="medium">
          <input aria-autocomplete="list" aria-controls="ic-search-bar-input-30-menu" aria-describedby="ic-search-bar-input-30-assistive-hint" aria-expanded="true" aria-haspopup="listbox" aria-label="Test label" aria-owns="ic-search-bar-input-30-menu" autocapitalize="off" autocomplete="off" id="ic-search-bar-input-30" inputmode="search" name="ic-search-bar-input-30" placeholder="Search" role="combobox" value="">
          <div class="clear-button-container">
            <ic-button aria-label="Clear" class="clear-button clear-button-unfocused" id="clear-button" size="medium" theme="dark" type="submit" variant="icon">
              svg
            </ic-button>
            <div class="divider"></div>
          </div>
          <div class="search-submit-button-container search-submit-button-disabled">
            <ic-button aria-label="Search" class="search-submit-button search-submit-button-disabled search-submit-button-unfocused" disabled="" id="search-submit-button" size="medium" theme="dark" type="submit" variant="icon">
              svg
            </ic-button>
          </div>
        </ic-input-component-container>
        <div class="menu-container">
          <ic-menu activationtype="manual" inputlabel="Test label" labelfield="label" menuid="ic-search-bar-input-30-menu" open="" searchmode="navigation" value="" valuefield="value"></ic-menu>
        </div>
      </div>
    </ic-input-container>
    <div aria-live="polite" class="search-results-status" role="status">
      9 results available
    </div>
  </template>
  <input class="ic-input" name="ic-search-bar-input-30" type="hidden" value="">
</ic-search-bar>
`;

exports[`ic-search-bar search should render with helper-text: renders-with-helpertext 1`] = `
<ic-search-bar class="ic-search-bar-search" helper-text="This is a description" label="Test label" value="espresso">
  <template shadowrootmode="open">
    <ic-input-container>
      <!---->
      <div class="component-container">
        <ic-input-label class="with-helper">
          <ic-typography variant="label">
            <label htmlfor="ic-search-bar-input-7">
              Test label
            </label>
          </ic-typography>
          <ic-typography class="helpertext helpertext-normal" variant="caption">
            <span id="ic-search-bar-input-7-helper-text">
              This is a description
            </span>
          </ic-typography>
        </ic-input-label>
        <ic-input-component-container size="medium">
          <input aria-autocomplete="list" aria-describedby="ic-search-bar-input-7-helper-text ic-search-bar-input-7-assistive-hint" aria-haspopup="listbox" aria-label="Test label" autocapitalize="off" autocomplete="off" id="ic-search-bar-input-7" inputmode="search" name="ic-search-bar-input-7" placeholder="Search" value="Espresso">
          <div class="clear-button-container">
            <ic-button class="clear-button clear-button-unfocused ic-button-size-medium ic-button-variant-icon ic-theme-dark" exportparts="button" id="clear-button">
              <template shadowrootmode="open">
                <ic-tooltip label="Clear" placement="bottom" silent="" target="ic-button-with-tooltip-clear-button">
                  <button aria-label="Clear" class="button" part="button" type="submit">
                    <slot></slot>
                  </button>
                </ic-tooltip>
              </template>
              svg
            </ic-button>
            <div class="divider"></div>
          </div>
          <div class="search-submit-button-container">
            <ic-button class="ic-button-size-medium ic-button-variant-icon ic-theme-dark search-submit-button search-submit-button-unfocused" exportparts="button" id="search-submit-button">
              <template shadowrootmode="open">
                <ic-tooltip label="Search" placement="bottom" silent="" target="ic-button-with-tooltip-search-submit-button">
                  <button aria-label="Search" class="button" part="button" type="submit">
                    <slot></slot>
                  </button>
                </ic-tooltip>
              </template>
              svg
            </ic-button>
          </div>
        </ic-input-component-container>
        <div class="menu-container"></div>
      </div>
    </ic-input-container>
    <div aria-live="polite" class="search-results-status" role="status"></div>
  </template>
  <input class="ic-input" name="ic-search-bar-input-7" type="hidden" value="espresso">
</ic-search-bar>
`;

exports[`ic-search-bar search should render with options: renders-with-options 1`] = `
<ic-search-bar class="ic-search-bar-search" label="Test label" value="espresso">
  <template shadowrootmode="open">
    <ic-input-container>
      <ic-input-label for="ic-search-bar-input-6" helpertext="" label="Test label"></ic-input-label>
      <ic-input-component-container size="medium">
        <input aria-autocomplete="list" aria-describedby="ic-search-bar-input-6-assistive-hint" aria-haspopup="listbox" aria-label="Test label" autocapitalize="off" autocomplete="off" id="ic-search-bar-input-6" inputmode="search" name="ic-search-bar-input-6" placeholder="Search" value="Espresso">
        <div class="clear-button-container">
          <ic-button class="clear-button clear-button-unfocused ic-button-size-medium ic-button-variant-icon ic-theme-dark" exportparts="button" id="clear-button">
            <template shadowrootmode="open">
              <ic-tooltip label="Clear" placement="bottom" silent="" target="ic-button-with-tooltip-clear-button">
                <button aria-label="Clear" class="button" part="button" type="submit">
                  <slot></slot>
                </button>
              </ic-tooltip>
            </template>
            svg
          </ic-button>
          <div class="divider"></div>
        </div>
        <div class="search-submit-button-container">
          <ic-button class="ic-button-size-medium ic-button-variant-icon ic-theme-dark search-submit-button search-submit-button-unfocused" exportparts="button" id="search-submit-button">
            <template shadowrootmode="open">
              <ic-tooltip label="Search" placement="bottom" silent="" target="ic-button-with-tooltip-search-submit-button">
                <button aria-label="Search" class="button" part="button" type="submit">
                  <slot></slot>
                </button>
              </ic-tooltip>
            </template>
            svg
          </ic-button>
        </div>
      </ic-input-component-container>
      <div class="menu-container"></div>
    </ic-input-container>
    <div aria-live="polite" class="search-results-status" role="status"></div>
  </template>
  <input class="ic-input" name="ic-search-bar-input-6" type="hidden" value="espresso">
</ic-search-bar>
`;

exports[`ic-search-bar search should render with value: renders-with-value 1`] = `
<ic-search-bar class="ic-search-bar-search" label="Test label" value="foo">
  <template shadowrootmode="open">
    <ic-input-container>
      <ic-input-label for="ic-search-bar-input-1" helpertext="" label="Test label"></ic-input-label>
      <ic-input-component-container size="medium">
        <input aria-label="Test label" autocapitalize="off" autocomplete="off" id="ic-search-bar-input-1" inputmode="search" name="ic-search-bar-input-1" placeholder="Search" value="foo">
        <div class="clear-button-container">
          <ic-button class="clear-button clear-button-unfocused ic-button-size-medium ic-button-variant-icon ic-theme-dark" exportparts="button" id="clear-button">
            <template shadowrootmode="open">
              <ic-tooltip label="Clear" placement="bottom" silent="" target="ic-button-with-tooltip-clear-button">
                <button aria-label="Clear" class="button" part="button" type="submit">
                  <slot></slot>
                </button>
              </ic-tooltip>
            </template>
            svg
          </ic-button>
          <div class="divider"></div>
        </div>
        <div class="search-submit-button-container">
          <ic-button class="ic-button-size-medium ic-button-variant-icon ic-theme-dark search-submit-button search-submit-button-unfocused" exportparts="button" id="search-submit-button">
            <template shadowrootmode="open">
              <ic-tooltip label="Search" placement="bottom" silent="" target="ic-button-with-tooltip-search-submit-button">
                <button aria-label="Search" class="button" part="button" type="submit">
                  <slot></slot>
                </button>
              </ic-tooltip>
            </template>
            svg
          </ic-button>
        </div>
      </ic-input-component-container>
      <div class="menu-container"></div>
    </ic-input-container>
    <div aria-live="polite" class="search-results-status" role="status"></div>
  </template>
  <input class="ic-input" name="ic-search-bar-input-1" type="hidden" value="foo">
</ic-search-bar>
`;

exports[`ic-search-bar search should render: renders 1`] = `
<ic-search-bar class="ic-search-bar-search" label="Test label" value="">
  <template shadowrootmode="open">
    <ic-input-container>
      <ic-input-label for="ic-search-bar-input-0" helpertext="" label="Test label"></ic-input-label>
      <ic-input-component-container size="medium">
        <input aria-label="Test label" autocapitalize="off" autocomplete="off" id="ic-search-bar-input-0" inputmode="search" name="ic-search-bar-input-0" placeholder="Search" value="">
        <div class="clear-button-container">
          <ic-button class="clear-button clear-button-unfocused ic-button-size-medium ic-button-variant-icon ic-theme-dark" exportparts="button" id="clear-button">
            <template shadowrootmode="open">
              <ic-tooltip label="Clear" placement="bottom" silent="" target="ic-button-with-tooltip-clear-button">
                <button aria-label="Clear" class="button" part="button" type="submit">
                  <slot></slot>
                </button>
              </ic-tooltip>
            </template>
            svg
          </ic-button>
          <div class="divider"></div>
        </div>
        <div class="search-submit-button-container search-submit-button-disabled">
          <ic-button class="ic-button-disabled ic-button-size-medium ic-button-variant-icon ic-theme-dark search-submit-button search-submit-button-disabled search-submit-button-unfocused" exportparts="button" id="search-submit-button">
            <template shadowrootmode="open">
              <ic-tooltip label="Search" placement="bottom" silent="" target="ic-button-with-tooltip-search-submit-button">
                <button aria-disabled="true" aria-label="Search" class="button" disabled="" part="button" type="submit">
                  <slot></slot>
                </button>
              </ic-tooltip>
            </template>
            svg
          </ic-button>
        </div>
      </ic-input-component-container>
      <div class="menu-container"></div>
    </ic-input-container>
    <div aria-live="polite" class="search-results-status" role="status"></div>
  </template>
  <input class="ic-input" name="ic-search-bar-input-0" type="hidden" value="">
</ic-search-bar>
`;
